finished hw3 i think

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -8,8 +8,12 @@
   <p>
     <%= params[:course_name] %>
   </p>
-  <h4>Grade level</h4>
+  <h4>Level at which you are screwed</h4>
   <p>
-    <%= params[:grade_level] %>
+    <%= params[:how_screwed_level] %>
+  </p>
+  <h4>Do u no da wae</h4>
+  <p>
+    <%= params[:da_wae] %>
   </p>
 </div>
